CMAKE_MINIMUM_REQUIRED(VERSION 3.10 FATAL_ERROR)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

SET(CMAKE_INSTALL_MESSAGE NEVER)

PROJECT(kernel8.img C ASM_NASM)

INCLUDE_DIRECTORIES(inc)
# Maybe this will help us organize private headers better...
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

ADD_SUBDIRECTORY(kernel)

ADD_EXECUTABLE(kernel8.img kern_main.c)
TARGET_LINK_LIBRARIES(kernel8.img Kernel)
SET_TARGET_PROPERTIES(kernel8.img PROPERTIES LINK_DEPENDS ${LINKER_SCRIPT})


# We should possibly be more careful what we strip instead of just
# stripping everything.
IF (CMAKE_BUILD_TYPE STREQUAL Release)
    ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD
            COMMAND ${CMAKE_STRIP} ${CMAKE_PROJECT_NAME})
ENDIF()
