CMAKE_MINIMUM_REQUIRED(VERSION 3.10 FATAL_ERROR)

SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})

SET(CMAKE_INSTALL_MESSAGE NEVER)

PROJECT(pious CXX ASM)

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})
INCLUDE_DIRECTORIES(inc)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

ADD_SUBDIRECTORY(kernel)

ADD_EXECUTABLE(pious kern_main.cpp cpprt.cpp)
TARGET_LINK_LIBRARIES(pious Kernel)
SET_TARGET_PROPERTIES(pious PROPERTIES LINK_DEPENDS ${LINKER_SCRIPT})

ADD_CUSTOM_COMMAND(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD
	COMMAND ${CMAKE_OBJCOPY} -O binary ${CMAKE_PROJECT_NAME} kernel8.img)
