LIST(APPEND KERNEL_SOURCES boot.S)

LIST(APPEND KERNEL_HEADERS mmio.h)
LIST(APPEND KERNEL_SOURCES mmio.c)

IF (TARGET_SYSTEM STREQUAL "bcm2711")
LIST(APPEND KERNEL_SOURCES bcm2711/mailbox.h)
LIST(APPEND KERNEL_SOURCES bcm2711/mailbox.c)

LIST(APPEND KERNEL_SOURCES bcm2711/uart.h)
LIST(APPEND KERNEL_SOURCES bcm2711/uart.c)

LIST(APPEND KERNEL_SOURCES bcm2711/gpio.h)
LIST(APPEND KERNEL_SOURCES bcm2711/gpio.c)
ENDIF(TARGET_SYSTEM STREQUAL "bcm2711")

ADD_LIBRARY(Kernel STATIC
	${KERNEL_HEADERS}
	${KERNEL_SOURCES})
