LIST(APPEND KERNEL_SOURCES boot.S)

LIST(APPEND KERNEL_HEADERS mmio.h)
LIST(APPEND KERNEL_SOURCES mmio.cpp)

IF (TARGET_SYSTEM STREQUAL "bcm2711")
LIST(APPEND KERNEL_SOURCES bcm2711/mailbox.h)
LIST(APPEND KERNEL_SOURCES bcm2711/mailbox.cpp)

LIST(APPEND KERNEL_SOURCES bcm2711/uart.h)
LIST(APPEND KERNEL_SOURCES bcm2711/uart.cpp)

LIST(APPEND KERNEL_SOURCES bcm2711/gpio.h)
LIST(APPEND KERNEL_SOURCES bcm2711/gpio.cpp)
ENDIF(TARGET_SYSTEM STREQUAL "bcm2711")

ADD_LIBRARY(Kernel STATIC
	${KERNEL_HEADERS}
	${KERNEL_SOURCES})
